--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,16 @@
 {
-    "manifest_version": 3,
-    "name": "YT Shorts Remover",
-    "version": "1.0",
-    "description": "Removes YT from the page",
-    "permissions": ["scripting", "tabs"],
-    "host_permissions": ["https://www.youtube.com/*"],
-    "content_scripts": [
-      {
-        "matches": ["*://www.youtube.com/*"],
-        "js": ["content.js"],
-        "run_at": "document_idle"
-      }
-    ],
-    "default_icon": "images/icon.png"
-  }
-  
+  "manifest_version": 3,
+  "name": "YT Shorts Remover",
+  "version": "1.0",
+  "description": "Removes Shorts from YouTube pages",
+  "permissions": ["scripting", "tabs"],
+  "host_permissions": ["https://www.youtube.com/*"],
+  "content_scripts": [
+    {
+      "matches": ["*://www.youtube.com/*"],
+      "js": ["scripts/content.js"],
+      "run_at": "document_idle"
+    }
+  ],
+  "default_icon": "images/icon.png"
+}
